# http_server

./: AUTH.md  Cargo.toml  custom_config.toml  server.toml
src/: main.rs  server.rs  tests.rs
src/http_lib/: auth.rs  connection_pool.rs  error.rs  route.rs  router.rs  server.rs  thread_pool.rs
src/lib/: auth.rs  buffered_stream.rs  config.rs  error.rs  logger.rs  mod.rs  request.rs  response.rs  route.rs  router.rs  server.rs
src/tests/: advanced_features.rs  auth.rs  basic_http.rs  content_serving.rs  error_handling.rs  helpers.rs  http_compliance.rs  mod.rs  performance.rs  routing.rs
static/: about.html  index.html
static/assets/: readme.txt  script.js  style.css
