[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generate_config"
path = "src/bin/generate_config.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[lib]
name = "api"
path = "src/lib/mod.rs"

[dependencies]
